# congruentia

./: README.md  make_problem_json.py  pyproject.toml  study.py
linear_alg/: adding_vectors.json
problem_jsons/: example_problem.json  example_problem_2.json  example_problem_future.json
src/: problem.py  question.py  subject.py  test_problem.py  utils.py
src/congruentia/: problem.py  question.py  subject.py  utils.py
tests/: test_problem.py  test_subject.py
